# bevy_polyline

./: Cargo.toml
examples/: clipping.rs  minimal.rs  nbody.rs  perspective.rs
src/: clipping.rs  lib.rs  material.rs  polyline.rs
src/shaders/: polyline.wgsl
