[package]
edition = "2021"
name = "bevy_polyline"
version = "0.15.0"
description = "Polyline Rendering for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline"
homepage = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline"
documentation = "https://docs.rs/bevy_polyline"
readme = "README.md"
keywords = ["bevy", "gamedev", "graphics", "polyline"]
categories = ["game-development", "rendering"]
authors = [
  "Foresight Mining Software Corporation",
  "Jonas Matser",
  "Aevyrie Roessler",
]

[dependencies]
bevy_app = "0.19"
bevy_asset = "0.19"
bevy_camera = "0.19"
bevy_color = "0.19"
bevy_core_pipeline = "0.19"
bevy_derive = "0.19"
bevy_ecs = "0.19"
bevy_math = "0.19"
bevy_mesh = "0.19"
bevy_post_process = "0.19"
bevy_reflect = "0.19"
bevy_render = "0.19"
bevy_shader = "0.19"
bevy_transform = "0.19"
bitflags = "2.3"
bytemuck = "1.16.1"

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = [
  "bevy_pbr",
  "bevy_window",
  "bevy_winit",
  "ktx2",
  "tonemapping_luts",
  "x11",
  "zstd_rust",
] }
lazy_static = "1.4.0"
rand = "0.8.4"
ringbuffer = "0.15"
